# Heart_Rate_Detection

./: CMakeLists.txt  ColorMagnify.cpp  ColorMagnify.h  README.md  main.cpp
MTCNN/: CMakeLists.txt  MTCNN.cpp
color_magnify/: CMakeLists.txt  color_magnify.cpp  color_magnify.h
skcf/: CMakeLists.txt  README.md  gradient.cpp  gradient.h  ktrackers.cpp  ktrackers.h
